--- a/reference.html
+++ b/reference.html
@@ -31,129 +31,130 @@
         </header>
         <section>
           <h3>HTML Terms</h3>
-          <ul>
-            <li><p>Attribute</p></li>
-            <p>
+          <dl>
+            <dt>Attribute</dt>
+            <dd>
               An HTML element property that provides additional information or
               functionality for an element. Attributes appear as a name/value pair
               with the value contained in quotation marks.
-            </p>
-            <li><p>Block-Level Element</p></li>
-            <p>
+            </dd>
+            <dt>Block-Level Element</dt>
+            <dd>
               HTML tags that create blocks of content within the document such as
               headings and paragraphs. Block-level elements typically stack one on
               top of each other based on the order they appear in the code.
-            </p>
-            <li><p>Child Element</p></li>
-            <p>
+            </dd>
+            <dt>Child Element</dt>
+            <dd>
               Any HTML element that is contained inside another HTML element.
               Child element tags must close before their parent element tags.
-            </p>
-            <li><p>Closing Tag</p></li>
-            <p>
+            </dd>
+            <dt>Closing Tag</dt>
+            <dd>
               Appears after an element&rsquo;s content and indicates the end of an
               element. Is identical to an element&rsquo;s opening tag with the
               addition of a forward slash (/) prior to the tag&rsquo;s character.
-            </p>
-            <li><p>Comment</p></li>
-            <p>
+            </dd>
+            <dt>Comment</dt>
+            <dd>
               Reference information added to the code. May include an overview of
               more complex code, a reminder for future authors, or communications
               within a team.
-            </p>
-            <li><p>CMS</p></li>
-            <p>
+            </dd>
+            <dt>CMS</dt>
+            <dd>
               CMS is short for <b>Content Management System</b>, and refers to any
               system designed to allow users to create and maintain content. For
               the web, it primarily refers to software designed to manage web
               sites and their content. Examples include Joomla! and WordPress.
-            </p>
-            <li><p>CSS</p></li>
-            <p>
+            </dd>
+            <dt>CSS</dt>
+            <dd>
               Cascading Style Sheets (CSS)is a presentation language used to
               control the presentation and layout of web pages.
-            </p>
-            <li><p>Doctype</p></li>
-            <p>
+            </dd>
+            <dt>Doctype</dt>
+            <dd>
               Short for <b>Document Type Declaration</b>. Appears at the top of
               all HTML documents to trigger standards mode and identifies the
               version of HTML used by the document.
-            </p>
-            <li><p>DOM</p></li>
-            <p>
+            </dd>
+            <dt>DOM</dt>
+            <dd>
               The DOM, or <b>Document Object Model</b>, is a representation of
               documents like HTML. The DOM can be thought of as an outline where
               tags are represented by &ldquo;nodes.&rdquo; Scripting languages
               like JavaScript reference the DOM when accessing or modifying page
               content.
-            </p>
-            <li><p>Elements</p></li>
-            <p>
+            </dd>
+            <dt>Elements</dt>
+            <dd>
               HTML elements consist of an HTML tag, used to identify the content,
               and the content itself. Is often used interchangeably with the term
               &ldquo;tags&rdquo; although technically tags only refer to the tag
               itself.
-            </p>
-            <li><p>FTP</p></li>
-            <p>
+            </dd>
+            <dt>FTP</dt>
+            <dd>
               FTP stands for <b>File Transfer Protocol</b>. It&rsquo;s a common
               protocol used for transferring large files from one server to
               another.
-            </p>
-            <li><p>HTTP</p></li>
-            <p>
+            </dd>
+            <dt>HTTP</dt>
+            <dd>
               HTTP, or <b>Hypertext Transfer Protocol</b>, controls the formatting
               and transmission of HTML pages across web servers.
-            </p>
-            <li><p>Inline-Level Elements</p></li>
-            <p>
+            </dd>
+            <dt>Inline-Level Elements</dt>
+            <dd>
               Elements that appear within the normal flow of text. Unlike
               block-level elements, inline-level elements do not start new lines
               within the normal document flow.
-            </p>
-            <li><p>JavaScript</p></li>
-            <p>
+            </dd>
+            <dt>JavaScript</dt>
+            <dd>
               Scripting language developed by Netscape and used to control much of
               the functionality and behavior on the web.
-            </p>
-            <li><p>Metadata</p></li>
-            <p>
+            </dd>
+            <dt>Metadata</dt>
+            <dd>
               Additional information about the document or document content,
               typically stored in meta tags.
-            </p>
-            <li><p>MIME Type</p></li>
-            <p>
+            </dd>
+            <dt>MIME Type</dt>
+            <dd>
               Short for <b>Multipurpose Internet Mail Extension,</b> MIME types
               are used to tell user agents what type of program a file or
               extension is. Without a proper MIME type, user agents can have
               trouble properly running applications or processing files.
-            </p>
-            <li><p>Parent Element</p></li>
-            <p>
+            </dd>
+            <dt>Parent Element</dt>
+            <dd>
               An HTML element that contains another element. It is possible for an
               element to be a child of one element and the parent of another.
-            </p>
-            <li><p>Replaced Element</p></li>
-            <p>
+            </dd>
+            <dt>Replaced Element</dt>
+            <dd>
               Any HTML element where the contents of the element are replaced by
               something else. Examples would be images, video, or other plug-in
               content.
-            </p>
-            <li><p>Tag</p></li>
-            <p>
+            </dd>
+            <dt>Tag</dt>
+            <dd>
               Markup characters that indicate what type of content appear on the
               page. Most tags consist of both an opening and closing tag.
-            </p>
-            <li><p>URL</p></li>
-            <p>
+            </dd>
+            <dt>URL</dt>
+            <dd>
               URL stands for <b>Uniform Resource Locator</b>. It serves as the
               address of a document or other resource on the web.
-            </p>
-            <li><p>W3C</p></li>
-            <p>
+            </dd>
+            <dt>W3C</dt>
+            <dd>
               The W3C, or <b>World Wide Web Consortium</b>, is the standards body
               responsible for authoring the HTML specification.
-            </p>
+            </dd>
+          </dl>
         </section>
         <section>
           <table
